fix: updated stuff

--- a/src/pages/fivem/fm2d.mdx
+++ b/src/pages/fivem/fm2d.mdx
@@ -5,9 +5,9 @@ import { Cards, Card } from '@/components/card.tsx'
 
 Simple resource that allows you to have server notifications sent to a discord channel using webhooks!
 
-<Callout type="info" emoji="ℹ️">
-    NOTE: you will likely need a chat command script for this to work alongside if you do not already have one, in which
-    case you should check out our [Extended Commands](https://github.com/toxic-development/Extended-Commands) script.
+<Callout type="warning" emoji="⚠️">
+    Due to FiveM's active caching it is not recommended to make changes to **any** resources when the server is online.
+    However you can get away with it for most smaller resources!
 </Callout>
 
 ## In this section
