--- a/src/pages/fivem/fm2d/setup/commands.mdx
+++ b/src/pages/fivem/fm2d/setup/commands.mdx
@@ -5,6 +5,11 @@ import { Cards, Card } from '@/components/card.tsx'
 # Commands Setup
 Simple introduction to configuring the `commands` sections of the resources settings file.
 
+<Callout type="info" emoji="ℹ️">
+    NOTE: you will likely need a chat command script for this to work alongside if you do not already have one, in which
+    case you should check out our [Extended Commands](https://github.com/toxic-development/Extended-Commands) script.
+</Callout>
+
 ### In this section
 
 <Cards>
