--- a/src/pages/fivem/index.mdx
+++ b/src/pages/fivem/index.mdx
@@ -5,6 +5,11 @@ import { Cards, Card } from '@/components/card.tsx'
 Welcome, here you can find guides, documentation and use cases for all of our
 fivem related projects, scripts and resources!
 
+<Callout type="warning" emoji="⚠️">
+    Due to FiveM's active caching it is not recommended to make changes to **any** resources when the server is online.
+    However you can get away with it for most smaller resources!
+</Callout>
+
 ---
 
 ## In this section
